cluster2/dr.yml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1beta1
  kind: DestinationRule
  metadata:
    labels:
      kiali_wizard: request_routing
    name: skupper-ui
  spec:
    host: skupper.kafka.svc.cluster.local
    trafficPolicy:
      tls:
        insecureSkipVerify: true
        mode: SIMPLE
- apiVersion: networking.istio.io/v1beta1
  kind: DestinationRule
  metadata:
    name: skupper-router-local
  spec:
    host: skupper-router-local.kafka.svc.cluster.local
    trafficPolicy:
      tls:
        mode: DISABLE
- apiVersion: networking.istio.io/v1beta1
  kind: DestinationRule
  metadata:
    name: skupper-router
  spec:
    host: skupper-router.kafka.svc.cluster.local
    trafficPolicy:
      tls:
        mode: DISABLE
- apiVersion: networking.istio.io/v1beta1
  kind: DestinationRule
  metadata:
    name: skupper-router-remote
  spec:
    host: skupper-router-test.apps.cluster1.example.com
    trafficPolicy:
      tls:
        mode: DISABLE
- apiVersion: networking.istio.io/v1beta1
  kind: DestinationRule
  metadata:
    name: skupper-claims-remote
  spec:
    host: claims-test.apps.cluster1.example.com
    trafficPolicy:
      tls:
        mode: DISABLE
- apiVersion: networking.istio.io/v1beta1
  kind: DestinationRule
  metadata:
    name: skupper-router-shortname2
  spec:
    host: skupper-router
    trafficPolicy:
      tls:
        mode: DISABLE
- apiVersion: networking.istio.io/v1beta1
  kind: DestinationRule
  metadata:
    name: skupper-router-local.kafka.svc.cluster.local
  spec:
    host: skupper-router-local.kafka.svc.cluster.local
    trafficPolicy:
      tls:
        mode: DISABLE
- apiVersion: networking.istio.io/v1beta1
  kind: DestinationRule
  metadata:
    name: pizza-kafka-0.pizza-kafka-brokers.kafka.svc
  spec:
    host: pizza-kafka-0.pizza-kafka-brokers.kafka.svc
    trafficPolicy:
      tls:
        mode: DISABLE
- apiVersion: networking.istio.io/v1beta1
  kind: DestinationRule
  metadata:
    name: pizza-kafka-1.pizza-kafka-brokers.kafka.svc
  spec:
    host: pizza-kafka-1.pizza-kafka-brokers.kafka.svc
    trafficPolicy:
      tls:
        mode: DISABLE
- apiVersion: networking.istio.io/v1beta1
  kind: DestinationRule
  metadata:
    name: pizza-kafka-2.pizza-kafka-brokers.kafka.svc
  spec:
    host: pizza-kafka-2.pizza-kafka-brokers.kafka.svc
    trafficPolicy:
      tls:
        mode: DISABLE
- apiVersion: networking.istio.io/v1beta1
  kind: DestinationRule
  metadata:
    name: pizza-kafka-bootstrap.kafka.svc
  spec:
    host: pizza-kafka-bootstrap.kafka.svc
    trafficPolicy:
      tls:
        mode: DISABLE
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
